--- a/DataDrivenFramework_LearningYouTube/test-output/testng_metrics.html
+++ b/DataDrivenFramework_LearningYouTube/test-output/testng_metrics.html
@@ -65,8 +65,8 @@
 								<table style="width:100%">
 									<tbody>
 										<tr style="height:100%">
-											<td style="font-size:60px; color:rgb(105, 135, 219)">4</td>
-											<td style="font-size:60px; color:#2ecc71">4</td>
+											<td style="font-size:60px; color:rgb(105, 135, 219)">1</td>
+											<td style="font-size:60px; color:#2ecc71">0</td>
 										</tr>
 										<tr>
 											<td>
@@ -91,7 +91,7 @@
 								<table style="width:100%">
 									<tbody>
 										<tr style="height:100%">
-											<td style="font-size:60px; color:#fc6666">0</td>
+											<td style="font-size:60px; color:#fc6666">1</td>
 											<td style="font-size:60px; color:#9E6B6A">0</td>
 										</tr>
 										<tr>
@@ -149,7 +149,7 @@
  executeDataTable('#cm',3);
  executeDataTable('#tm',3);
  	executeDataTable('#mm',3);
- 	createPieChart(4,0,0,'testChartID','Test Status:');
+ 	createPieChart(0,1,0,'testChartID','Test Status:');
  	createBarGraph('#cm',0,3,5,'classBarID','Number of failures ','Class'); 
  	createBarGraph('#tm',1,3,10,'testsBarID','Elapsed Time(s) ','Test');
  	createBarGraph('#mm',1,3,10,'methodsBarID','Elapsed Time(s) ','Method');
@@ -173,12 +173,12 @@
  </thead>
  <tbody>
 <tr>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal;text-align:left;">LoginUsingDataProviderByReadingExcel</td>
-<td style="color:teal">4</td>
-<td style="color:green">4</td>
-<td style="color:red">0</td>
+<td style="word-wrap: break-word;max-width: 300px; white-space: normal;text-align:left;">BothCorrect</td>
+<td style="color:teal">1</td>
+<td style="color:green">0</td>
+<td style="color:red">1</td>
 <td style="color:#9E6B6A">0</td>
-<td>100.0</td>
+<td>0.0</td>
 </tr>
   </tbody>
  </table>
@@ -188,7 +188,7 @@
  </div>
  <div class="tabcontent" id="testMetrics">
  <h4><b><i class="fa fa-list-alt" style="color:PALEVIOLETRED"></i> Test Metrics</b></h4>
- <h6 style="text-align:right">Total Execution Time: <b style="color:Red; text-align:right">00:00:42</b></h6>
+ <h6 style="text-align:right">Total Execution Time: <b style="color:Red; text-align:right">00:00:00</b></h6>
  <hr/>
  </h6>
  <table class="table row-border tablecard" id="tm">
@@ -202,29 +202,13 @@
  </tr>
  </thead>
  <tbody>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">loginTestScenario ([dummyAdmin, admin123, InValid])</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">6</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">loginTestScenario ([dummyAdmin, dummyPass, InValid])</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">7</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">loginTestScenario ([Admin, admin123, valid])</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">9</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">loginTestScenario ([Admin, dummyPass, InValid])</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">5</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
+<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">BothCorrect</td>
+<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">loginWithBothCorrect</td>
+<td style="color: red">FAIL</td>
+<td style="text-align:center">0</td>
+<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left">
+Parameter 'username' is required by @Test on method loginWithBothCorrect but has not been marked @Optional or defined
+in C:\Users\Hashir\AppData\Local\JetBrains\IdeaIC2023.1\temp-testng-customsuite.xml</td>
 </tr>
  </tbody>
  </table>
@@ -246,54 +230,6 @@
  </tr>
  </thead>
  <tbody>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">closeBrowser</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">0</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">closeBrowser</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">0</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">openPage</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">4</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">closeBrowser</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">0</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">closeBrowser</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">0</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">openPage</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">2</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">openPage</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">2</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
-<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginUsingDataProviderByReadingExcel</td>
-<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">openPage</td>
-<td style="color: green">PASS</td>
-<td style="text-align:center">2</td>
-<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
-</tr>
  </tbody>
  </table>
  <div class="row">
